# argentum_game_coordinate_system

./: Cargo.toml
src/: coordinate.rs  errors.rs  lib.rs  macros.rs  prelude.rs  region.rs
src/coordinate/: arithmetic.rs  base_coordinate.rs  coordinate_trait.rs  signed_coordinate.rs  tests.rs  unsigned_coordinate.rs
src/coordinate/signed_coordinate/: tests.rs
src/coordinate/unsigned_coordinate/: tests.rs
