[package]
name = "argentum_game_coordinate_system"
version = "0.7.0"
edition = "2021"
description = "Argentum: Coordinate System"
license = "AGPL-3.0-or-later"

[dependencies]
argentum_game_coordinate_system_macros = { path = "../argentum_game_coordinate_system_macros" }
min_max_traits = "0.1.0"
num = "0.4.3"
quickcheck = { version = "1.0.3", default-features = false }
thiserror = "1.0.63"
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.75"
